# Context_aware_query_debugger

./: DESIGN.md  README.md  main.py  pyproject.toml
chell/: __init__.py  cli.py  config.py  pipeline.py
chell/caam/: __init__.py  attention.py  context_encoder.py  patcher.py
chell/core/: __init__.py  pipeline.py  responders.py  types.py
chell/data/: __init__.py  builder.py  dataset.py  schema.py
chell/detection/: __init__.py  base.py  llm_detector.py  static_detector.py  taxonomy.py
chell/evaluation/: __init__.py  baselines.py  evaluator.py  metrics.py
chell/memory/: __init__.py  faiss_index.py  store.py
chell/models/: __init__.py  api_backend.py  base.py  hf_backend.py  mock.py  registry.py
chell/query/: __init__.py  base.py  generator.py  ranking.py  retriever.py
chell/refinement/: __init__.py  base.py  refiner.py
chell/training/: __init__.py  collator.py  trainer.py
chell/validation/: __init__.py  base.py  executor.py  validators.py
configs/: caam.yaml  eval.yaml  model.yaml  retrieval.yaml  train.yaml
data/curated/: case_001.json  case_002.json  case_003.json  case_004.json  case_005.json  case_006.json  case_007.json  case_008.json  case_009.json  case_010.json  case_011.json  case_012.json  case_013.json  case_014.json  case_015.json  case_016.json  (+134 more)
examples/: buggy_pandas.py
scripts/: curate_dataset.py  evaluate.py  finetune.py  gen_cases.py  run_demo.py
tests/: conftest.py  test_caam.py  test_detection.py  test_evaluation.py  test_memory.py  test_pipeline.py  test_query.py  test_training.py  test_types.py  test_validation.py
(+8 files in other folders)
