[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chell"
version = "0.1.0"
description = "Context-Aware, Query-Driven Debugging of Logical Errors in Small Language Models"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "accelerate>=0.27",
    "peft>=0.10",
    "datasets>=2.18",
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.6",
    "jsonschema>=4.21",
    "zss>=1.2",
    "pylint>=3.1",
    "pandas>=2.1",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "anthropic>=0.25",
    "openai>=1.20",
    "google-generativeai>=0.5",
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.7",
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
]

[project.scripts]
chell = "chell.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["chell*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
